i18n/fr/docusaurus-plugin-content-docs/version-9.2/Training-Manual/05-Stage-4/20.Collaboration-tools.md
---
title: OC - Outils de collaboration
---
**Introduction**  
Dans ce module, vous utiliserez Paratext Live pour permettre à l'équipe de collaborer, de sorte que chacun puisse voir les modifications apportées au texte sur son propre ordinateur.

**Où en sommes-nous dans le processus ?**  
Nous avons déjà vu comment collaborer avec Envoyer/Recevoir. La vérification par un conseiller est l'une des nombreuses occasions où plusieurs personnes doivent examiner le même texte, voire l'éditer ensemble. Paratext Live permet à chacun de consulter le texte sur son propre ordinateur et de voir les modifications apportées en temps réel.

**Pourquoi est-il important ?**  
Il existe plusieurs autres moyens de permettre à tout le monde de regarder le même texte. Mais Paratext Live permet non seulement à tout le monde de voir le texte, mais il permet également à plusieurs personnes de modifier le texte.

**Que ferez-vous ?**  
-  Connectez tous les utilisateurs au même réseau.
-  Faire un envoyer/recevoir
-  Démarrer Paratext Live et se joindre la session live
-  Faire les modifications
-  Échanger tous les fichiers
-  Terminer/quitter la session Live
-  Faire un envoyer/recevoir
:::info Vidéo
Voir le vidéo 4.1 Collaboration Tools.
:::
### 20.1 Paratext Live

Avant de pouvoir lancer Paratext Live, tous les utilisateurs doivent effectuer un envoyer/recevoir et tout le monde doit être connecté au même réseau.

**Envoyer/Recevoir**  
Avant de lancer Paratext Live, tous les participants doivent envoyer/recevoir le projet. Paratext vous indiquera que vous devez envoyer/recevoir le projet.

**Connecter tous les utilisateurs au même réseau**  
Paratext Live peut utiliser

**Démarrer Paratext Live**  
-  Ouvrez le menu du projet.
-  Sous **Outils**, cliquez sur **Paratext Live**.
-  Ou utilisez l'icône de la barre d'outils.
-  Cliquez sur **Démarrer/se joindre la session Live**. 
   -  *Si vous n'avez pas activé l'enregistrement automatique, il sera le activé automatiquement pour la durée de la session.*
-  Paratext vous demande alors si vous êtes l'éditeur principal.
-  Si vous **n'êtes pas** l'éditeur principal, attendez, ne cliquez pas sur Annuler car cela annulerait votre participation à la session en direct.
-  Si vous **êtes** le rédacteur principal, cliquez sur **Start as Primary Editor**.  
   -  *Lorsqu'une session est active, le bouton Paratext Live est vert*.

**Partager les modifications fait à partir d'Outils**  
Tout le texte de l'écriture est partagé lorsque vous faites un envoyer/recevoir. Cependant, les modifications apportées à l'aide de divers outils ne sont pas partagées automatiquement. Des exemples de ces modifications non partagées sont l'état de l'orthographe, l'état du passage parallèle, les termes bibliques et leurs équivalents identifiés, et les remarques de discussion.

Les modifications de tous les utilisateurs sont partagées, mais si deux personnes ont modifié différemment le même élément, seule la modification d'une personne sera enregistrée.

〰️
----

**Terminer la session Paratext Live**  
-  Cliquez sur le bouton Paratext Live
-  Cliquez sur **Terminer/quitter la session Live**
-  Si vous êtes le rédacteur principal, vous verrez une boîte de message.
-  Cliquez sur **Terminer la session normalement**.
-  Effectuer un envoyer/recevoir.

:::tip
**Notez bien** : si l'un des participants a effectué une mise à niveau vers Paratext 9.2, **tous les participants** doivent le faire car les fichiers Paratext Live sont légèrement différents dans la version 9.2.
:::

:::info
**Pour plus d'aide**, recherchez **live** dans le champ de recherche de la barre de titre. Il existe de nombreuses rubriques utiles pour vous aider à utiliser Paratext Live.
:::
